# kicad-tool

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/kicad_tool/: cli.py  editor.py  formatter.py  models.py  parser.py  sexp.py
tests/: test_cli.py  test_editor.py  test_formatter.py  test_match_refs.py  test_models.py  test_parser.py  test_sexp.py
tests/fixtures/: hirvi.kicad_sch  jolene.kicad_sch
