[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kicad-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kicad-skip>=0.2",
]

[project.scripts]
kicad-tool = "kicad_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.uv]
cache-dir = ".uv_cache"
